Fixed alignment of toolbar label, added separator, styled sort buttons as radio buttons, remvoed column pickers.

--- a/extension/skin/lovebird.css
+++ b/extension/skin/lovebird.css
@@ -1,7 +1,10 @@
 treechildren::-moz-tree-cell-text(large)
 {
     font-size: 14pt;
-    /* TODO make line height taller */
+}
+
+#lb-add-person-label {
+  vertical-align: middle;
 }
 
 #lb-add-person {
